--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <img src="img/mypoltfolio.png" alt="">
         <p>自分のポートフォリオサイトです。</p>
         <p>HTML/CSS/JavaScriptを使用</p>
-        <p>URL:<a href="">aaa</a></p>
+        <p>URL:<a href="https://www.peipei-com.website/">https://www.peipei-com.website/</a></p>
         <p><a href="https://github.com/shunpei2020/shunpei2020.github.io">github</a></p>
       </div>
       <div class="work">
