--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <li><a href="#home" id="smooth">Home</a></li>
       <li><a href="#about" id="smooth">About</a></li>
       <li><a href="#works" id="smooth">Works</a></li>
-      <li><a href="#contact" id="smooth">Contact</a></li>
+      <li><a href="#skills" id="smooth">Skills</a></li>
     </ul>
     <div class="burger">
       <div class="line1"></div>
@@ -64,9 +64,22 @@
     </div>
   </section>
 
-  <section class="form" id="contact">
-    <h2>お問い合わせはこちら</h2>
-    <p><a href="mailto:peipei.com2020@gmail.com">peipei.com2020@gmail.com</a></p>
+  <section class="skills" id="skills">
+    <div class="skill">
+      <h2>Skills</h2>
+      <p>フロントエンド： HTML/CSS, JavaScript</p>
+      <P>バックエンド： PHP</P>
+      <p>データベース： MySQL</p>
+      <p>フレームワーク： Bootstrap, Laravel, Reactjs</p>
+      <p>サーバー・ツール： MAMP, Xserver, firebase, github</p>
+      <p>学習中： Reactjs, Typescript, docker, git, Nextjs,</p>
+    </div>
+    <div class="philosophy">
+      <h2>Philosophy</h2>
+      <p>
+      私がエンジニアを目指している理由は、エンジニアは技術のトレンドが日々進化し続けており、新しい技術を学びながら日々成長できるというところに魅力を感じました。また、割と一つのことに没頭することが好きなので自分に合っているなと感じます。社会の様々な問題をプログラミングを通して解決し、利用者全員に喜んでもらえるようなサービスを開発していきたいです。
+      </p>
+    </div>
   </section>
   <script src="app.js"></script>
 </body>
