--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <div class="philosophy">
       <h2>Philosophy</h2>
       <p>
-      私がエンジニアを目指している理由は、エンジニアは技術のトレンドが日々進化し続けており、新しい技術を学びながら日々成長できるというところに魅力を感じました。また、割と一つのことに没頭することが好きなので自分に合っているなと感じます。社会の様々な問題をプログラミングを通して解決し、利用者全員に喜んでもらえるようなサービスを開発していきたいです。
+      私がエンジニアを目指したいと思った理由は、エンジニアは技術のトレンドが日々進化し続けており、新しい技術を学びながら日々成長できるというところに魅力を感じました。また、割と一つのことに没頭することが好きなので自分に合っているなと感じます。社会の様々な問題をプログラミングを通して解決し、利用者全員に喜んでもらえるようなサービスを開発していきたいです。
       </p>
     </div>
   </section>
