--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   <section class="about" id="about">
     <img src="img/IMG_6284-min.jpeg" alt="">
-    <p class="last">Frontend developer</p>
+    <p class="last">Web developer</p>
     <div class="about-me">
       <h2>About me</h2>
       <p>1999年11月12日 21歳</p>
@@ -71,8 +71,8 @@
       <P>バックエンド： PHP</P>
       <p>データベース： MySQL</p>
       <p>フレームワーク： Bootstrap, Laravel, Reactjs</p>
-      <p>サーバー・ツール： MAMP, Xserver, firebase, github</p>
-      <p>学習中： Reactjs, Typescript, docker, git, Nextjs,</p>
+      <p>サーバー・ツール： MAMP, firebase, github</p>
+      <p>学習中： Reactjs, docker, git</p>
     </div>
     <div class="philosophy">
       <h2>Philosophy</h2>
