--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 
   <main id="home">
     <h1 class="text">Thanks   for   visiting     me</h1 class="text">
-    <img src="img/trank.jpg" alt="">
+    <img src="img/trank-min.jpg" alt="">
     <h2>Shunpei Tanaka's portfolio</h2>
   </main>
 
   <section class="about" id="about">
     <img src="img/IMG_6284-min.jpeg" alt="">
-    <p class="last">Web developer</p>
+    <p class="last">Web Enginner</p>
     <div class="about-me">
       <h2>About me</h2>
       <p>1999年11月12日 21歳</p>
@@ -48,18 +48,24 @@
     <h2>Works</h2>
     <div class="worksf">
       <div class="work">
-        <img src="img/mypoltfolio.png" alt="">
+        <a href="https://www.peipei-com.website/"><img src="img/mypoltfolio-min.png" alt="" target="blank"></a>
         <p>自分のポートフォリオサイトです。</p>
         <p>HTML/CSS/JavaScriptを使用</p>
-        <p>URL:<a href="https://www.peipei-com.website/">https://www.peipei-com.website/</a></p>
-        <p><a href="https://github.com/shunpei2020/shunpei2020.github.io">github</a></p>
+        <p>URL:<a href="https://www.peipei-com.website/" target="blank">https://www.peipei-com.website/</a></p>
+        <p><a href="https://github.com/shunpei2020/shunpei2020.github.io" target="blank">github</a></p>
       </div>
       <div class="work">
-        <img src="img/tanablog.png" alt="">
+        <a href="https://www.blog-of-life.net/" target="blank"><img src="img/tanablog-min.png" alt=""></a>
         <p>画像アップロード機能付きブログサイトです。</p>
         <p>PHPを使用</p>
-        <p>URL:<a href="https://www.blog-of-life.net/">https://www.blog-of-life.net/</a></p>
-        <p><a href="https://github.com/shunpei2020/tanaBlog/tree/main">github</a></p>
+        <p>URL:<a href="https://www.blog-of-life.net/" target="blank">https://www.blog-of-life.net/</a></p>
+        <p><a href="https://github.com/shunpei2020/tanaBlog/tree/main" target="blank">github</a></p>
+      </div>
+      <div class="work">
+        <a href="https://shunpei2020.github.io/cresta-mosya/" target="blank"><img src="img/crestamosya-min-min.png" alt=""></a>
+        <p>クリスタLPの模写サイトです。</p>
+        <p>デザインカンプから模写しました。HTML/CSS,JavaScriptを使用</p>
+        <p>URL:<a href="https://shunpei2020.github.io/cresta-mosya/" target="blank">https://shunpei2020.github.io/cresta-mosya/</a></p>
       </div>
     </div>
   </section>
@@ -67,20 +73,51 @@
   <section class="skills" id="skills">
     <div class="skill">
       <h2>Skills</h2>
-      <p>フロントエンド： HTML/CSS, JavaScript</p>
-      <P>バックエンド： PHP</P>
-      <p>データベース： MySQL</p>
-      <p>フレームワーク： Bootstrap, Laravel, Reactjs</p>
-      <p>サーバー・ツール： MAMP, firebase, github</p>
-      <p>学習中： Reactjs, docker, git</p>
-    </div>
-    <div class="philosophy">
-      <h2>Philosophy</h2>
-      <p>
-      私がエンジニアを目指したいと思った理由は、エンジニアは技術のトレンドが日々進化し続けており、新しい技術を学びながら日々成長できるというところに魅力を感じました。また、割と一つのことに没頭することが好きなので自分に合っているなと感じます。社会の様々な問題をプログラミングを通して解決し、利用者全員に喜んでもらえるようなサービスを開発していきたいです。
-      </p>
+      <div>
+        <p>Front end</p>
+        <div class="lang">
+          <img src="img/html-min.jpg" alt="">
+          <img src="img/css-min.jpg" alt="">
+          <img src="img/javascript-thumb.png" alt="">
+          <img src="img/jquery-min.png" alt="">
+        </div>
+      </div>
+      <div>
+        <P>Back end</P>
+        <div class="lang">
+          <img src="img/php-min.jpeg" alt="">
+          <img src="img/mysql-min.png" alt="">
+          <img src="img/laravel-min.png" alt="">
+        </div>
+      </div>
+      <div>
+        <p>Environment/<br>tools</p>
+        <div class="lang">
+          <img src="img/mamp-min.jpg" alt="">
+          <img src="img/Firebase_240-min.jpg" alt="">
+          <img src="img/image_icon_git-min.png" alt="">
+          <img src="img/github-min.jpg" alt="">
+        </div>
+      </div>
+      <div>
+        <p>Studying</p>
+        <div class="lang">
+          <img src="img/react.png" alt="">
+          <img src="img/typescript-min.png" alt="">
+          <img src="img/docker_facebook_share-min.png" alt="">
+        </div>
+      </div>
     </div>
   </section>
+
+  <footer>
+    <ul class="nav-link">
+      <li><a href="#home" id="smooth">Home</a></li>
+      <li><a href="#about" id="smooth">About</a></li>
+      <li><a href="#works" id="smooth">Works</a></li>
+      <li><a href="#skills" id="smooth">Skills</a></li>
+    </ul>
+  </footer>
   <script src="app.js"></script>
 </body>
 </html>
