--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
       </div>
       <div class="work">
         <a href="https://www.blog-of-life.net/" target="blank"><img src="img/tanablog-min.png" alt=""></a>
-        <p>画像アップロード機能付きブログサイトです。</p>
+        <p>画像投稿サイトです。</p>
         <p>PHPを使用</p>
         <p>URL:<a href="https://www.blog-of-life.net/" target="blank">https://www.blog-of-life.net/</a></p>
-        <p><a href="https://github.com/shunpei2020/tanaBlog/tree/main" target="blank">github</a></p>
+        <p><a href="https://github.com/shunpei2020/Photo-Boaster" target="blank">github</a></p>
       </div>
       <div class="work">
         <a href="https://shunpei2020.github.io/cresta-mosya/" target="blank"><img src="img/crestamosya-min-min.png" alt=""></a>
@@ -73,44 +73,61 @@
   <section class="skills" id="skills">
     <div class="skill">
       <h2>Skills</h2>
-      <div>
-        <p>Front end</p>
-        <div class="lang">
+      <div class="lang">
+        <div>
           <img src="img/html-min.jpg" alt="">
-          <img src="img/css-min.jpg" alt="">
+          <h3>HTML/CSS</h3>
+        </div>
+        <p>基礎をマスターしています。デザインカンプからLPサイトを模写しました。また、このポートフォリオサイトも作成しました。</p>
+      </div>
+      <div class="lang">
+        <div>
           <img src="img/javascript-thumb.png" alt="">
+          <h3>JavaScript</h3>
+        </div>
+        <p>基礎的なことを理解しています。このポートフォリオのアニメーションをVanila javascrptで実装しました。</p>
+      </div>
+      <div class="lang">
+        <div>
           <img src="img/jquery-min.png" alt="">
+          <h3>jQuery</h3>
         </div>
+        <p>基本的なロジックを理解しています。アニメーションやAjax（非同期通信）などができます。</p>
       </div>
-      <div>
-        <P>Back end</P>
-        <div class="lang">
+      <div class="lang">
+        <div>
           <img src="img/php-min.jpeg" alt="">
+          <h3>PHP</h3>
+        </div>
+        <p>CRUDの作成や画像アップロード、ユーザー機能などの基礎を理解しています。画像投稿サイトを作成しました。</p>
+      </div>
+      <div class="lang">
+        <div>
           <img src="img/mysql-min.png" alt="">
+          <h3>MySQL</h3>
+        </div>
+        <p>データベースは主にMySQLを使用しています。画像投稿サイトの作成に使用しました。</p>
+      </div>
+      <h2>Studying</h2>
+      <div class="lang">
+        <div>
           <img src="img/laravel-min.png" alt="">
+          <h3>Laravel</h3>
         </div>
-      </div>
-      <div>
-        <p>Environment/<br>tools</p>
-        <div class="lang">
-          <img src="img/mamp-min.jpg" alt="">
-          <img src="img/Firebase_240-min.jpg" alt="">
-          <img src="img/image_icon_git-min.png" alt="">
-          <img src="img/github-min.jpg" alt="">
-        </div>
-      </div>
-      <div>
-        <p>Studying</p>
-        <div class="lang">
+        <div>
           <img src="img/react.png" alt="">
-          <img src="img/typescript-min.png" alt="">
+          <h3>Reactjs</h3>
+        </div>
+        <div>
           <img src="img/docker_facebook_share-min.png" alt="">
+          <h3>docker</h3>
         </div>
       </div>
     </div>
   </section>
 
   <footer>
+    <p id="top"><a href="">top</p></a>
     <ul class="nav-link">
       <li><a href="#home" id="smooth">Home</a></li>
       <li><a href="#about" id="smooth">About</a></li>
@@ -118,6 +135,11 @@
       <li><a href="#skills" id="smooth">Skills</a></li>
     </ul>
   </footer>
+
+  <script
+  src="https://code.jquery.com/jquery-3.5.1.js"
+  integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+  crossorigin="anonymous"></script>
   <script src="app.js"></script>
 </body>
 </html>
