--- a/index.html
+++ b/index.html
@@ -52,20 +52,21 @@
         <p>自分のポートフォリオサイトです。</p>
         <p>HTML/CSS/JavaScriptを使用</p>
         <p>URL:<a href="https://www.peipei-com.website/" target="blank">https://www.peipei-com.website/</a></p>
-        <p><a href="https://github.com/shunpei2020/shunpei2020.github.io" target="blank">github</a></p>
+        <p class="github"><a href="https://github.com/shunpei2020/shunpei2020.github.io" target="blank">github</a></p>
       </div>
       <div class="work">
         <a href="https://www.blog-of-life.net/" target="blank"><img src="img/tanablog-min.png" alt=""></a>
         <p>画像投稿サイトです。</p>
         <p>PHPを使用</p>
         <p>URL:<a href="https://www.blog-of-life.net/" target="blank">https://www.blog-of-life.net/</a></p>
-        <p><a href="https://github.com/shunpei2020/Photo-Boaster" target="blank">github</a></p>
+        <p class="github"><a href="https://github.com/shunpei2020/Photo-Boaster" target="blank">github</a></p>
       </div>
       <div class="work">
         <a href="https://shunpei2020.github.io/cresta-mosya/" target="blank"><img src="img/crestamosya-min-min.png" alt=""></a>
         <p>クリスタLPの模写サイトです。</p>
         <p>デザインカンプから模写しました。HTML/CSS,JavaScriptを使用</p>
         <p>URL:<a href="https://shunpei2020.github.io/cresta-mosya/" target="blank">https://shunpei2020.github.io/cresta-mosya/</a></p>
+        <p class="github"><a href="https://github.com/shunpei2020/cresta-mosya" target="blank">github</a></p>
       </div>
     </div>
   </section>
@@ -127,7 +128,7 @@
   </section>
 
   <footer>
-    <p id="top"><a href="">top</p></a>
+    <p><a href="#home" id="smooth">top</p></a>
     <ul class="nav-link">
       <li><a href="#home" id="smooth">Home</a></li>
       <li><a href="#about" id="smooth">About</a></li>
@@ -136,10 +137,6 @@
     </ul>
   </footer>
 
-  <script
-  src="https://code.jquery.com/jquery-3.5.1.js"
-  integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
-  crossorigin="anonymous"></script>
   <script src="app.js"></script>
 </body>
 </html>
