--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
       </div>
       <div class="work">
         <a href="https://shunpei2020.github.io/cresta-mosya/" target="blank"><img src="img/crestamosya-min-min.png" alt=""></a>
-        <p>クリスタLPの模写サイトです。</p>
-        <p>デザインカンプから模写しました。HTML/CSS,JavaScriptを使用</p>
+        <p>LPの模写サイトです。</p>
+        <p>デザインカンプからコーディングしました。HTML/CSS,JavaScriptを使用</p>
         <p>URL:<a href="https://shunpei2020.github.io/cresta-mosya/" target="blank">https://shunpei2020.github.io/cresta-mosya/</a></p>
         <p class="github"><a href="https://github.com/shunpei2020/cresta-mosya" target="blank">github</a></p>
       </div>
@@ -79,7 +79,7 @@
           <img src="img/html-min.jpg" alt="">
           <h3>HTML/CSS</h3>
         </div>
-        <p>基礎をマスターしています。デザインカンプからLPサイトを模写しました。また、このポートフォリオサイトも作成しました。</p>
+        <p>基礎をマスターしています。デザインカンプからLPサイトをコーディングしました。また、このポートフォリオサイトも作成しました。レスポンシブ対応できます。</p>
       </div>
       <div class="lang">
         <div>
@@ -110,7 +110,7 @@
         <p>データベースは主にMySQLを使用しています。画像投稿サイトの作成に使用しました。</p>
       </div>
       <h2>Studying</h2>
-      <div class="lang">
+      <div class="lang stydy">
         <div>
           <img src="img/laravel-min.png" alt="">
           <h3>Laravel</h3>
@@ -126,6 +126,16 @@
       </div>
     </div>
   </section>
+
+  <footer>
+    <p><a href="#home" id="smooth">top</p></a>
+    <ul class="nav-link">
+      <li><a href="#home" id="smooth">Home</a></li>
+      <li><a href="#about" id="smooth">About</a></li>
+      <li><a href="#works" id="smooth">Works</a></li>
+      <li><a href="#skills" id="smooth">Skills</a></li>
+    </ul>
+  </footer>
 
   <script src="app.js"></script>
 </body>
