--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="work">
         <a href="https://shunpei2020.github.io/cresta-mosya/" target="blank"><img src="img/crestamosya-min-min.png" alt=""></a>
         <p>LPの模写サイトです。</p>
-        <p>デザインカンプからコーディングしました。HTML/CSS,JavaScriptを使用</p>
+        <p>デザインカンプ（XD）からコーディングしました。HTML/CSS,JavaScriptを使用</p>
         <p>URL:<a href="https://shunpei2020.github.io/cresta-mosya/" target="blank">https://shunpei2020.github.io/cresta-mosya/</a></p>
         <p class="github"><a href="https://github.com/shunpei2020/cresta-mosya" target="blank">github</a></p>
       </div>
