--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <a href="https://www.peipei-com.website/"><img src="img/mypoltfolio-min.png" alt="" target="blank"></a>
         <p>自分のポートフォリオサイトです。</p>
         <p>HTML/CSS/JavaScriptを使用</p>
-        <p>URL:<a href="https://www.peipei-com.website/" target="blank">https://www.peipei-com.website/</a></p>
+        <p>URL:<a href="https://shunpei2020.github.io/" target="blank">https://shunpei2020.github.io/</a></p>
         <p class="github"><a href="https://github.com/shunpei2020/shunpei2020.github.io" target="blank">github</a></p>
       </div>
       <div class="work">
